--- a/index.html
+++ b/index.html
@@ -254,9 +254,40 @@
       </div>
     </header>
 
+    <div class="container my-5">
+      <div class="row text-center">
+          <div class="col-md-6 mb-4">
+              <div class="card1">
+                  <img src="https://picsum.photos/seed/-0VP1ObXHHfeePpEg5PBh/512" class="card1-img-top" alt="Beneficio 1">
+                  <div class="card1-body">
+                      <h5 class="card1-title">IaaS</h5>
+                     <ul class="card1-text text-align-justify text-decoration-none">
+                        <li>Servidores virtuales: Los usuarios pueden crear máquinas virtuales con diferentes especificaciones (CPU, RAM, almacenamiento) según sus necesidades.</li>
+                        <li>Almacenamiento en la nube: Espacio de almacenamiento escalable para datos, backups y archivos.</li>
+                        <li>Redes virtuales: Los usuarios pueden gestionar sus propias redes privadas y sistemas de firewall.</li>
+                      </ul><
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6 mb-4">
+              <div class="card1">
+                  <img src="https://picsum.photos/seed/hSe9YgOBLrpzmTjX-ECFx/512" class="card1-img-top" alt="Beneficio 2">
+                  <div class="card1-body">
+                      <h5 class="card1-title">PaaS</h5>
+                      <p class="card1-text">Descripción breve del segundo beneficio del producto. Explica su importancia y cómo mejora la experiencia del usuario.</p>
+                  </div>
+                  
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+
+
     <header class="bg-black text-center py-5 mb-4">
       <div class="container">
-        <h1 class="font-weight-light text-white">Compra</h1>
+        <h1 class="font-weight-light text-white">Servicios</h1>
       </div>
     </header>
 
