--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -1,11 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../Css/index.css" />
+    <link rel="icon" type="image/png" href="../Img/Mini_Icon.png">
+    <title>SkyCloud</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Spinnaker&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <main>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../Img/Icon.png" alt="SkyCloud Logo" style="max-height: 60px" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="../index.html#Presentacion">Presentación</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >Productos</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="../index.html#Servicios">Servicios</a></li>
+                <li><a class="dropdown-item" href="../index.html#Caracteristicas">Características</a></li>
+                <li><a class="dropdown-item" href="../Pages/Beneficios.html">Beneficios</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <hr class="featurette-divider mt-5 bg-white" />
+
+    <div class="panel-container">
+      <div class="panel"></div>
+      <div class="container">
+        <form class="row">
+          <div class="col-6">
+            <label for="emailInput" class="form-label text-white">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="emailInput"
+              placeholder="Escribe tu email"
+            />
+          </div>
+
+          <div class="col-6">
+            <label for="inputTlf" class="form-label text-white">Tu Teléfono</label>
+            <input
+              type="tel"
+              class="form-control"
+              id="inputTlf"
+              placeholder="Escribe tu teléfono"
+            />
+          </div>
+
+          <div class="col-12">
+            <label for="inputName" class="form-label text-white">
+              <br>Tu Nombre
+            </label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputName"
+              placeholder="Escribe tu nombre"
+            />
+          </div>
+
+          <div class="col-12 d-flex align-items-center mt-3">
+            <input
+              type="checkbox"
+              id="checkTerms"
+              class="form-check-input me-2"
+            />
+            <label for="checkTerms" class="form-check-label text-white">
+              Acepto los términos y condiciones
+            </label>
+          </div>
+
+          <div class="col-12 mt-4">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#thankYouModal"
+            >
+              Enviar
+            </button>
+          </div>
+        </form>
+
+        <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="thankYouModalLabel">¡Gracias!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                En breves nos pondremos en contacto con usted.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Aceptar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="bg-black text-center py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mb-4">
+            <a class="btn btn-link text-decoration-none text-white" onclick="location.href='../Pages/Contacto.html';">
+              <i class="fas fa-envelope fa-2x"></i>
+            </a>
+            <a class="btn btn-link text-decoration-none text-white" onclick="location.href='../index.html#Servicios';">
+              <i class="fas fa-cloud fa-2x"></i>
+            </a>
+            <a class="btn btn-link text-decoration-none text-white" onclick="location.href='../index.html#Home';">
+              <i class="fas fa-home fa-2x"></i>
+            </a>
+          </div>
     
-</body>
+          <div class="col-12">
+            <h1 class="text-white mt-4">Juan Manuel González Díaz</h1>
+          </div>
+          
+          <div class="col-12">
+            <hr class="bg-white" />
+          </div>
+
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </main>
+  </body>
 </html>
