--- a/Pages/IaaS.html
+++ b/Pages/IaaS.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Css/index.css" />
-    <link rel="icon" type="image/png" href="Img\Mini_Icon.png">
+    <link rel="stylesheet" href="../Css/index.css" />
+    <link rel="icon" type="image/png" href="../Img/Mini_Icon.png" />
     <title>SkyCloud</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -16,16 +16,25 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Spinnaker&display=swap"
       rel="stylesheet"
     />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <main>
+  <style>
+   
+    .card1-img-top {
+      width: 100%;
+      max-width: 500px; 
+    }
+
+  </style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-black">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img src="Img/Icon.png" alt="SkyCloud Logo" style="max-height: 60px"
-        /></a>
+        <a class="navbar-brand" href="#">
+          <img src="../Img/Icon.png" alt="SkyCloud Logo" style="max-height: 60px" />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,11 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#Presentacion">Presentación</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="#Contacto">Contacto</a>
+              <a class="nav-link" href="../index.html#Presentacion">Presentación</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Pages/Contacto.html">Contacto</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -53,15 +64,65 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                >Productos</a
-              >
+                >Productos</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#Servicios">Servicios</a></li>
-                <li><a class="dropdown-item" href="#Caracteristicas">Características</a></li>
-                <li><a class="dropdown-item" href="#Beneficios">Beneficios</a></li>
+                <li><a class="dropdown-item" href="../index.html#Servicios">Servicios</a></li>
+                <li><a class="dropdown-item" href="../index.html#Caracteristicas">Características</a></li>
+                <li><a class="dropdown-item" href="../Pages/Beneficios.html">Beneficios</a></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
+    <hr class="featurette-divider mt-5" />
+    <hr class="featurette-divider mt-5 " />
+
+
+    <div class="container mx-auto">
+        <div class="row text-center">
+            <div class="col-md-6 mb-4">
+                <div class="card1">
+                    <img src="../Img/Cloud3jpg.jpg" class="card1-img-top" alt="Caracteristicas 1">
+                    <div class="card1-body">
+                        <h5 class="card1-title">IaaS</h5>
+                       <ul class="textjust card1-text">
+                          <li>Servidores virtuales: Los usuarios pueden crear máquinas virtuales con diferentes especificaciones (CPU, RAM, almacenamiento) según sus necesidades.</li>
+                          <li>Almacenamiento en la nube: Espacio de almacenamiento escalable para datos, backups y archivos.</li>
+                          <li>Redes virtuales: Los usuarios pueden gestionar sus propias redes privadas y sistemas de firewall.</li>
+                          <li>Recursos escalables: Se pueden ajustar los recursos según la demanda, pagando solo por lo que se utiliza.</li>
+                          <li>Control total: Tienes control sobre el sistema operativo, configuraciones y aplicaciones instaladas.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+    <footer class="bg-black text-center py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <a class="btn btn-link text-decoration-none" onclick="location.href='../Pages/Contacto.html';">  <i class="fas fa-envelope fa-2x"></i></a>
+              <a class="btn btn-link text-decoration-none" onclick="location.href='../index.html#Servicios';">                <i class="fas fa-cloud fa-2x"></i></a>
+              <a class="btn btn-link text-decoration-none" onclick="location.href='../index.html#Home';"> <i class="fas fa-home fa-2x"></i></a>
+            </div>
+      
+            <div class="col-12">
+              <h1 class="text-white mt-4">Juan Manuel González Díaz</h1>
+            </div>
+            
+            <div class="col-12">
+              <hr class="bg-white">
+            </div>
+          </div>
+        </div>
+      </footer>
+    </main>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+</html>
