--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <div class="card-content">
           <h2 class="card-title text-white">IaaS</h2>
           <p class="card-description text-white">flexibilidad y control</p>
-          <button class="card-button">Leer Más</button>
+          <button class="card-button" onclick="location.href='Pages/IaaS.html';" >Leer Más</button>
         </div>
       </div>
 
@@ -248,7 +248,7 @@
           <p class="card-description text-white">
             simplicidad y velocidad de desarrollo
           </p>
-          <button class="card-button">Leer Más</button>
+          <button class="card-button" onclick="location.href='Pages/PaaS.html';">Leer Más</button>
         </div>
       </div>
     </div>
