--- a/Pages/IaaS.html
+++ b/Pages/IaaS.html
@@ -36,14 +36,11 @@
 }
 
 
-
 .h5_service2 h5{
     background-color: rgb(161, 211, 255);
     border-radius: 8px;
     padding: 38px;
     width: 150%;
-
-
 }
     </style>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-black">
@@ -99,7 +96,7 @@
     <div class="container mx-auto">
         <div class="row">
             <div class="col-md-6 mb-4">
-                    <h1 class="card1-title">¿Qué es IaaS?</h1>
+                    <h1 class="card1-tittle">¿Qué es IaaS?</h1>
                     <div class="h5_service">
                     <h5 class="h5_service">IaaS, o infraestructura como servicio, es un modelo de cloud computing que ofrece acceso bajo demanda a recursos de computación, como servidores, almacenamiento, redes y virtualización.
                     Se trata de un modelo muy atractivo en comparación con la manera tradicional de adquirir recursos de computación con los que ejecutar aplicaciones o almacenar datos, ya que esta requiere una mayor inversión de tiempo y dinero. Las organizaciones deben comprar equipos a través de procesos de aprovisionamiento que pueden llevar meses. También deben invertir en instalaciones físicas (normalmente, salas especializadas con sistemas energéticos y de refrigeración). Además, las empresas necesitan profesionales de TI para gestionarlos y mantenerlos después de desplegar los sistemas.  
