--- a/Pages/PaaS.html
+++ b/Pages/PaaS.html
@@ -20,7 +20,34 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       rel="stylesheet"
     />
+    
   </head>
+  <style>
+    .h5_service {
+    text-align: left;
+    padding-left: 5%;
+}
+
+.h5_service h5 {
+    width: 110%;
+}
+
+.card1-tittle h1{
+    width: 150%;
+}
+
+.h5_service2 h5{
+    background-color: rgb(161, 211, 255);
+    border-radius: 8px;
+    padding: 38px;
+    width: 150%;
+}
+
+.h5_service3 h5{
+    width: 160%;
+}
+
+  </style>
 
   <main>
   <body>
@@ -73,28 +100,45 @@
     <hr class="featurette-divider mt-5" />
     <hr class="featurette-divider mt-5 " />
 
-    <div class="col-md-6 mx-auto">
-        <div class="card1">
-            <img src="../Img/Cloud1512.png" class="card1-img-top" alt="Caracteristicas 2">
-            <div class="card1-body">
-                <h5 class="card1-title">PaaS</h5>
-                <ul class="textjust card1-text">
-                  <li>Entornos de desarrollo preconfigurados: Incluye todo lo necesario para desarrollar aplicaciones como servidores web, bases de datos, sistemas operativos y entornos de programación.</li>
-                  <li>Herramientas de gestión: Gestión automática de servidores, balanceo de carga, escalado de aplicaciones y monitorización del rendimiento.</li>
-                  <li>Soporte para múltiples lenguajes de programación: Plataformas como PaaS suelen admitir lenguajes como Java, Python, Ruby, .NET, etc.</li>
-                  <li>Bases de datos integradas: Bases de datos relacionales o NoSQL listas para ser utilizadas en la aplicación.</li>
-                  <li>Escalabilidad automática: PaaS ajusta automáticamente los recursos (CPU, RAM) según el tráfico o las necesidades de la aplicación.</li>
-
-                </ul>
+    <div class="container mx-auto">
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                    <h1 class="card1-tittle">¿Qué una plataforma como servicio (PaaS)?</h1>
+                    <div class="h5_service">
+                    <h5 class="h5_service">La plataforma como servicio (también conocida como PaaS) <a href="https://cloud.google.com/discover/types-of-cloud-computing?hl=es">es un tipo de modelo de servicio de cloud computing</a> que ofrece una plataforma en la nube flexible y escalable para desarrollar, desplegar, ejecutar y gestionar aplicaciones. Ofrece a los desarrolladores todo lo que necesitan para desarrollar aplicaciones sin los quebraderos de cabeza que conlleva actualizar el sistema operativo y las herramientas de desarrollo, y sin tener que mantener el hardware. En su lugar, son proveedores de servicios externos los que se encargan de proporcionar todo el entorno de PaaS (o plataforma) en la nube. <br> <br>
+                        Las soluciones de PaaS permiten a las empresas ahorrarse las dificultades y los costes que supone instalar hardware o software para desarrollar o alojar nuevas aplicaciones personalizadas. Los equipos de desarrollo simplemente adquieren acceso de pago por uso a todo lo que necesitan para crear aplicaciones personalizadas, como la infraestructura, las herramientas de desarrollo y los sistemas operativos, entre otros. <br> <br>
+                        El resultado es que el desarrollo de aplicaciones es más sencillo, rápido y seguro, lo que permite que los desarrolladores puedan centrarse en el código.  <br> <br>
+                        <button class="card-button" onclick="location.href='https://cloud.google.com/run?hl=es';">Conocer cloud run</button>
+                        <br> <br> <br>
+                    </h5>
+                    </div>
+                    <br> <br>
+                    <h1 class="card1-title">Definición de la plataforma como servicio
+                    </h1>
+                    <div class="h5_service2">
+                        <h5 class="h5_service">Una plataforma como servicio (PaaS) es un entorno integral en la nube que incluye todo lo que los desarrolladores necesitan para crear, ejecutar y gestionar aplicaciones, desde servidores y sistemas operativos hasta redes, almacenamiento, middleware, herramientas y más.</h5>
+                    </div>
+                    <br> <br>
+                    <h1 class="card1-tittle col-md-12">¿Cómo funcionan las PaaS?</h1>
+                    <div class="h5_service">
+                        <h5 class="h5_service3">A diferencia de los modelos de servicio de IaaS o SaaS, las soluciones de PaaS están orientadas específicamente al desarrollo de aplicaciones y software. Normalmente incluyen: <br><br>
+                            <ul>
+                                <li><b>Infraestructura en la nube: </b> centros de datos, almacenamiento, equipo de red y servidores</li>
+                                <li><b>Software middleware: </b> centros de datos, almacenamiento, equipo de red y servidores</li>
+                                <li><b>Interfaz de usuario: </b> interfaz gráfica de usuario (GUI), interfaz de línea de comandos (CLI), interfaz de API y, en algunos casos, las tres</li>
+                            </ul>
+                            Una solución de plataforma como servicio se suele ofrecer como una plataforma online segura a la que los desarrolladores pueden acceder a través de Internet, lo que les permite trabajar en proyectos desde cualquier lugar y colaborar sin trabas con otros miembros de su equipo. Las aplicaciones se crean directamente en la plataforma como servicio y se pueden desplegar de inmediato en cuanto se completan.
+                        </h5>
+                    </div>
             </div>
-            
         </div>
     </div>
 
+<br>
 
+<hr class="featurette-divider mt-5">
 
-
-    <footer class="bg-black text-center py-5">
+    <footer class="bg-black text-center py-5 col-12">
         <div class="container">
           <div class="row">
             <div class="col-12">
