--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   </head>
+
   <main>
+
   <body>
+    <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-black">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
@@ -65,6 +68,7 @@
       </div>
     </nav>
 
+    <!-- Carrusel -->
     <div id="carouselExampleCaptions" class="carousel slide vw-100 vh-100">
       <div class="carousel-indicators">
         <button
@@ -155,12 +159,14 @@
       </button>
     </div>
 
+    <!-- Encabezado -->
     <header class="bg-black text-center py-5 mb-4">
       <div class="container">
         <h1 id="Presentacion" class="font-weight-light text-white">Presentación</h1>
       </div>
     </header>
 
+    <!-- Presentación -->
     <div class="container mt-5">
       <section id="presentacion" class="text-center">
           <h1>Impulsa tu Negocio  </h1>
@@ -177,15 +183,17 @@
       </section>
   </div>
 
+  <!-- Linea divisora -->
   <hr class="featurette-divider" />
 
-
+    <!-- Encabezado -->
     <header class="bg-black text-center py-5 mb-4">
       <div class="container">
         <h1 id="Caracteristicas" class="font-weight-light text-white">Características</h1>
       </div>
     </header>
 
+    <!-- Características -->
     <div class="container my-5">
       <div class="row text-center">
           <div class="col-md-6 mb-4">
@@ -199,7 +207,7 @@
                         <li>Redes virtuales: Los usuarios pueden gestionar sus propias redes privadas y sistemas de firewall.</li>
                         <li>Recursos escalables: Se pueden ajustar los recursos según la demanda, pagando solo por lo que se utiliza.</li>
                         <li>Control total: Tienes control sobre el sistema operativo, configuraciones y aplicaciones instaladas.</li>
-                      </ul><
+                      </ul>
                   </div>
               </div>
           </div>
@@ -225,13 +233,14 @@
 
 
 
-
+    <!-- Encabezado -->
     <header class="bg-black text-center py-5 mb-4">
       <div class="container">
         <h1 id="Servicios" class="font-weight-light text-white">Servicios</h1>
       </div>
     </header>
 
+<!-- Servicios -->
     <div class="cards-section">
       <div class="card">
         <div class="card-content">
@@ -252,8 +261,10 @@
       </div>
     </div>
     
+    <!-- Linea Divisora -->
     <hr class="featurette-divider" />
 
+    <!-- Footer -->
     <footer class="bg-black text-center py-5">
       <div class="container">
         <div class="row">
@@ -275,7 +286,9 @@
     </footer>
   </main>   
     
+  <!-- JS -->
     <script>
+      // Scripts para el movimiento de las cartas de servicios
       const cards = document.querySelectorAll(".card");
 
       cards.forEach((card) => {
