--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -159,6 +159,7 @@
     
           <div class="col-12">
             <h1 class="text-white mt-4">Juan Manuel González Díaz</h1>
+            <p> &copy; Todos los derechos reservados.</p>
           </div>
           
           <div class="col-12">
