--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Juan Manuel González Díaz">
     <link rel="stylesheet" href="Css/index.css" />
     <link rel="icon" type="image/png" href="Img\Mini_Icon.png">
     <title>SkyCloud</title>
@@ -246,7 +247,7 @@
         <div class="card-content">
           <h2 class="card-title text-white">IaaS</h2>
           <p class="card-description text-white">flexibilidad y control</p>
-          <button class="card-button" onclick="location.href='Pages/IaaS.html';" >Leer Más</button>
+          <button class="card-button" onclick="location.href='Pages/IaaS.html';" > COMPRA YA!!</button>
         </div>
       </div>
 
@@ -256,7 +257,7 @@
           <p class="card-description text-white">
             simplicidad y velocidad de desarrollo
           </p>
-          <button class="card-button" onclick="location.href='Pages/PaaS.html';">Leer Más</button>
+          <button class="card-button" onclick="location.href='Pages/PaaS.html';">COMPRA YA!!</button>
         </div>
       </div>
     </div>
@@ -276,6 +277,7 @@
     
           <div class="col-12">
             <h1 class="text-white mt-4">Juan Manuel González Díaz</h1>
+            <p> &copy; Todos los derechos reservados.</p>
           </div>
           
           <div class="col-12">
